--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   firebase_core: ^1.24.0
   flutter:
     sdk: flutter
+  path: ^1.8.2
+  path_provider: ^2.0.11
+  sqflite: ^2.1.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
